<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    style="@style/AuthBackground"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/mainLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/application_name"
        android:textColor="#ffffffff"
        android:textSize="60sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/sec_app_name"
        android:id="@+id/app_sec_label"
        android:textStyle="bold"
        android:textSize="13sp"
        android:layout_below="@+id/mainLabelTextView"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffffff"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/app_sec_label"
        android:id="@+id/editTextLayout"
        android:layout_marginTop="@dimen/login_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@android:color/white"
        android:paddingLeft="@dimen/login_horizontal_padding"
        android:paddingRight="@dimen/login_horizontal_padding"
        android:paddingTop="@dimen/login_vertical_padding"
        android:paddingBottom="@dimen/login_vertical_padding">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userNameEditText"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:textColor="@color/text_color"
            android:textColorHint="@color/light_grey"
            android:textSize="17sp">
            <requestFocus />
        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameEditText"
            android:inputType="text"
            android:hint="@string/sign_up_name"
            android:textColor="@color/text_color"
            android:textColorHint="@color/light_grey"
            android:textSize="17sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordEditText"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:textColor="@color/text_color"
            android:textColorHint="@color/light_grey"
            android:textSize="17sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmPasswordEditText"
            android:inputType="textPassword"
            android:hint="@string/confirm_password_hint"
            android:textColor="@color/text_color"
            android:textColorHint="@color/light_grey"
            android:textSize="17sp"/>

    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button"
        android:id="@+id/signUpButton"
        android:layout_weight="1"
        android:textSize="13sp"
        android:textColor="@color/text_color"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_below="@+id/editTextLayout"
        android:background="@drawable/buttons_custom"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/already_have_user"
        android:textStyle="bold"
        android:id="@+id/alreadyLoginLabel"
        android:layout_below="@+id/signUpButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textColor="#ffffffff"/>

</RelativeLayout>

